jenkins_deployment.yml
apiVersion: extensions/v1beta1 # for versions before 1.7.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        volumeMounts:
         - name: cloud-volume
           mountPath: "/var/jenkins_home"
         - name: jenkins-installed-plugins
           mountPath: "/var/jenkins_home/plugins"
         - name: jobas
           mountPath: "/var/jenkins_home/jobs"
      volumes:
        - name: config-vol
          configMap:
            name: plugins
        - name: jenkins-installed-plugins
          emptyDir: {}
        - name: config-jobas
          configMap:
            name: jobas
        - name: jobas
          emptyDir: {}
        - name: cloud-volume
          persistentVolumeClaim:
              claimName: jenkins-claim
