jenkins_service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
   - name: my-first-port
#     protocol: TCP
     port: 8080
#     targetPort: 8080
#  ports:
#    - port: 8080
#      targetPort: 8080
  selector:
    app: jenkins
