jenkins_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
annotations:
  kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: example-com-tls
  rules:
  - host: jenkinsexample.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: my-first-port
